# mesos-command-modules

./: .mergify.yml  .travis.yml  CMakeLists.txt  Dockerfile  README.md
cmake/: ClangFormatCheck.cmake  FindBOOST.cmake  FindGLOG.cmake  FindGLOGBUILD.cmake  FindGTEST.cmake  FindPICOJSON.cmake  FindPROTOBUF.cmake  FindRAPIDJSON.cmake  PackageFindingHelper.cmake  UnitTestsCheck.cmake
examples/: docker-compose.yml  module.json.example
examples/docker/: .gitignore  README.md  docker-compose.yml
examples/docker/modules/: modules.json  slaveExecutorEnvironmentDecorator.sh
examples/modules/: cleanup.sh  isolate.sh  modules.json  prepare.sh  slaveRunTaskLabelDecorator.sh
scripts/: build_and_upload_module.sh  llvm-3.8.0.repo  travis.sh
src/: Command.hpp  CommandHook.cpp  CommandHook.hpp  CommandIsolator.cpp  CommandIsolator.hpp  CommandQoSController.cpp  CommandQoSController.hpp  CommandResourceEstimator.cpp  CommandResourceEstimator.hpp  CommandRunner.cpp  CommandRunner.hpp  ConfigurationParser.cpp  ConfigurationParser.hpp  Helpers.hpp  Logger.hpp  ModulesFactory.cpp  ModulesFactory.hpp  OpportunisticResourceEstimator.cpp  OpportunisticResourceEstimator.hpp  OpportunisticResourcesEstimator.cpp  RunningContext.cpp  RunningContext.hpp
tests/: .CommandResourceEstimatorTest.cpp.swp  CommandHookTest.cpp  CommandIsolatorTest.cpp  CommandQoSControllerTest.cpp  CommandResourceEstimatorTest.cpp  CommandRunnerTest.cpp  ConfigurationParserTest.cpp  ModulesFactoryTest.cpp  gtest_helpers.cpp  gtest_helpers.hpp  gtest_helpers.hxx  main.cpp
tests/scripts/: autokill.sh  cleanup.sh  echo_stdout.sh  force_kill.sh  infinite_loop.sh  isolate.sh  oversubscribable.sh  pipe_input.sh  prepare.sh  prepare_incorrect_protobuf.sh  prepare_malformed.sh  slaveExecutorEnvironmentDecorator_incorrect_protobuf.sh  slaveExecutorEnvironmentDecorator_malformed.sh  slaveRemoveExecutorHook.sh  slaveRunTaskLabelDecorator.sh  slaveRunTaskLabelDecorator_incorrect_protobuf.sh  slaveRunTaskLabelDecorator_malformed.sh  stderr.sh  unexecutable.sh  usage.sh  usage_continuous.sh  usage_incorrect_protobuf.sh  usage_long.sh  usage_malformed.sh  watch.sh  watch_continuous.sh  watch_empty.sh  watch_incorrect_protobuf.sh
